--- a/public/index.html
+++ b/public/index.html
@@ -526,6 +526,89 @@
                 <h4 class="portfolio-item-subtitle-contribution">Contribution:</h4>
                 <p class="portfolio-item-content-contribution">JavaScript, AJAX, Backbone.JS, jQuery, Lodash, JSON, TDD, HTML, CSS, SASS, Grunt, Bootstrap, Twig</p>
             </div>
+
+            <div class="portfolio-item-modal modal fade" id="foodora-modal" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="portfolio-item-modal-content">
+                        <button class="portfolio-item-modal-close">X</button>
+                        <div class="portfolio-item-modal-details-wrapper">
+                            <h3 class="portfolio-item-title">Burger King Delivery Service</h3>
+                            <h4 class="portfolio-item-subtitle">E-commerce in JavaScript/PHP</h4>
+                            <p class="portfolio-item-content-details">As Senior Front-end Developer in Rocket Internet SE (Berlin), for this project I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and to several JavaScript features including: restaurant search, product and toppings selection, cart, checkout and order tracking.</p>
+                            <p class="portfolio-item-content-details">Technologies: JavaScript, jQuery, Backbone.js, HTML5, Twig, CSS3, SASS, Bootstrap, Git.</p>
+                        </div>
+                        <div class="portfolio-item-notebook">
+                            <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+                            <div class="portfolio-item-img-full-wrapper carousel slide" id="foodora-main-carousel" >
+
+                                <ol class="carousel-indicators">
+                                    <li data-target="#foodora-main-carousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#foodora-main-carousel" data-slide-to="1"></li>
+                                    <li data-target="#foodora-main-carousel" data-slide-to="2"></li>
+                                    <li data-target="#foodora-main-carousel" data-slide-to="3"></li>
+                                </ol>
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="carousel-item active tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-01-notebook.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-02-notebook.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-03-notebook.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-04-notebook.jpg">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="left carousel-control" href="#foodora-main-carousel" role="button" data-slide="prev">
+                                <
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#foodora-main-carousel" role="button" data-slide="next">
+                                >
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <figure class="portfolio-item-mobile">
+                            <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
+                            <div class="portfolio-item-img-full-wrapper carousel slide" id="foodora-secondary-carousel" >
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="carousel-item active tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-01-mobile.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-02-mobile.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-03-mobile.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/foodora-04-mobile.jpg">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </figure>
+                    </div>
+                </div>
+            </div>
         </article>
 
         <article class="article-body portfolio-item-timvision js-portfolio-item">
@@ -946,10 +1029,9 @@
 
 </main>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/tether.min.js"></script>
+<script src="/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 <script src="/js/jquery.trackpad-scroll-emulator.min.js" ></script>
 <script src="/js/back.js" ></script>
 
