Added contents for Cubomusica

--- a/public/index.html
+++ b/public/index.html
@@ -728,35 +728,23 @@
                             <p class="portfolio-item-content-details">As Senior Front-end Developer in Rocket Internet SE (Berlin), for this project I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and to several JavaScript features including: restaurant search, product and toppings selection, cart, checkout and order tracking.</p>
                             <p class="portfolio-item-content-details">Technologies: JavaScript, jQuery, Backbone.js, HTML5, Twig, CSS3, SASS, Bootstrap, Git.</p>
                         </div>
-                        <div class="portfolio-item-notebook">
-                            <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+                        <div class="portfolio-item-samsung-tv">
+                            <img class="portfolio-item-device-img" src="/img/portfolio/samsung-tv.png">
                             <div class="portfolio-item-img-full-wrapper carousel slide" id="cubomusica-main-carousel" >
 
                                 <ol class="carousel-indicators">
                                     <li data-target="#cubomusica-main-carousel" data-slide-to="0" class="active"></li>
                                     <li data-target="#cubomusica-main-carousel" data-slide-to="1"></li>
-                                    <li data-target="#cubomusica-main-carousel" data-slide-to="2"></li>
-                                    <li data-target="#cubomusica-main-carousel" data-slide-to="3"></li>
                                 </ol>
                                 <div class="carousel-inner" role="listbox">
                                     <div class="carousel-item active tse-scrollable wrapper">
                                         <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-01-notebook.jpg">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-01.jpg">
                                         </div>
                                     </div>
                                     <div class="carousel-item tse-scrollable wrapper">
                                         <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-02-notebook.jpg">
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item tse-scrollable wrapper">
-                                        <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-03-notebook.jpg">
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item tse-scrollable wrapper">
-                                        <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-04-notebook.jpg">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-02.jpg">
                                         </div>
                                     </div>
                                 </div>
@@ -770,33 +758,6 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
-                        <figure class="portfolio-item-mobile">
-                            <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-                            <div class="portfolio-item-img-full-wrapper carousel slide" id="cubomusica-secondary-carousel" >
-                                <div class="carousel-inner" role="listbox">
-                                    <div class="carousel-item active tse-scrollable wrapper">
-                                        <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-01-mobile.jpg">
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item tse-scrollable wrapper">
-                                        <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-02-mobile.jpg">
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item tse-scrollable wrapper">
-                                        <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-03-mobile.jpg">
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item tse-scrollable wrapper">
-                                        <div class="tse-content">
-                                            <img class="portfolio-item-img-full" src="/img/portfolio/cubomusica-04-mobile.jpg">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </figure>
                     </div>
                 </div>
             </div>
