Added contents for Others

--- a/public/index.html
+++ b/public/index.html
@@ -899,9 +899,9 @@
             </div>
             <div class="portfolio-item-notebook-davide">
                 <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-                <span class="project-type-label">Website</span>
+                <span class="project-type-label">E-commerce</span>
                 <figure class="portfolio-item-img-preview">
-                    <img class="portfolio-item-img" src="/img/portfolio/davide-preview-notebook.jpg">
+                    <img class="portfolio-item-img" src="/img/portfolio/cca-preview-notebook.jpg">
                     <img class="portfolio-item-eye-icon" src="/img/icons/eye.svg">
                 </figure>
             </div>
@@ -937,6 +937,68 @@
                 <p class="portfolio-item-content-employer">Freelancing</p>
                 <h4 class="portfolio-item-subtitle-contribution">Contribution:</h4>
                 <p class="portfolio-item-content-contribution">UX/UI Design, HTML, CSS, JavaScript, CMS, Accessibility</p>
+            </div>
+
+            <div class="portfolio-item-modal-notebook modal fade" id="others-modal" tabindex="-1" role="dialog" aria-labelledby="others-modalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="portfolio-item-modal-content">
+                        <button class="portfolio-item-modal-close">X</button>
+                        <div class="portfolio-item-modal-details-wrapper">
+                            <h3 class="portfolio-item-title">Burger King Delivery Service</h3>
+                            <h4 class="portfolio-item-subtitle">E-commerce in JavaScript/PHP</h4>
+                            <p class="portfolio-item-content-details">As Senior Front-end Developer in Rocket Internet SE (Berlin), for this project I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and to several JavaScript features including: restaurant search, product and toppings selection, cart, checkout and order tracking.</p>
+                            <p class="portfolio-item-content-details">Technologies: JavaScript, jQuery, Backbone.js, HTML5, Twig, CSS3, SASS, Bootstrap, Git.</p>
+                        </div>
+                        <div class="portfolio-item-notebook">
+                            <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+                            <div class="portfolio-item-img-full-wrapper carousel slide" id="others-main-carousel" >
+
+                                <ol class="carousel-indicators">
+                                    <li data-target="#others-main-carousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#others-main-carousel" data-slide-to="1"></li>
+                                    <li data-target="#others-main-carousel" data-slide-to="2"></li>
+                                    <li data-target="#others-main-carousel" data-slide-to="3"></li>
+                                    <li data-target="#others-main-carousel" data-slide-to="4"></li>
+                                </ol>
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="carousel-item active tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/pandora-notebook.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/milena-notebook.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/scuola-notebook.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/acqua-notebook.jpg">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item tse-scrollable wrapper">
+                                        <div class="tse-content">
+                                            <img class="portfolio-item-img-full" src="/img/portfolio/cca-notebook.jpg">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="left carousel-control" href="#others-main-carousel" role="button" data-slide="prev">
+                                <
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#others-main-carousel" role="button" data-slide="next">
+                                >
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </article>
     </section>
